--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <button class="heart-button">
+    <a href="https://accolades.dev">
+    <button class="heart-button" 
         <span class="heart"><i class="fa fa-heart"></i></span>
         <span class="ripple"></span>
         DONATE
     </button>
+    </a>
 </body>
 </html>
