added an href with a link to index.html

--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <a href="https://accolades.dev">
-    <button class="heart-button" 
+    <a href="https://accolades.dev" class="heart-button">
         <span class="heart"><i class="fa fa-heart"></i></span>
         <span class="ripple"></span>
         DONATE
-    </button>
     </a>
 </body>
 </html>
