--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <a href="https://accolades.dev" class="heart-button">
+    <h3> CLicking the button will redirect to my Blog </h3>
+    <a href="https://blog.accolades.dev" class="heart-button">
         <span class="heart"><i class="fa fa-heart"></i></span>
         <span class="ripple"></span>
         DONATE
